[GTK][WPE] Graphic issue with invalidations on composited layers with subpixel positions https://bugs.webkit.org/show_bug.cgi?id=193239

Patch by Karl Leplat <karl.leplat_ext@softathome.com> on 2019-01-14
Reviewed by Žan Doberšek.

Source/WebCore:

Test: compositing/repaint/invalidations-on-composited-layers-with-subpixel-positions.html

* platform/graphics/texmap/coordinated/CoordinatedGraphicsLayer.cpp:
(WebCore::CoordinatedGraphicsLayer::updateContentBuffers): Use enclosed dirty rect values
when invalidating the CoordinatedBackingStore areas.

LayoutTests:

* compositing/repaint/invalidations-on-composited-layers-with-subpixel-positions.html: Added.
* platform/gtk/compositing/repaint/invalidations-on-composited-layers-with-subpixel-positions-expected.png: Added.
* platform/gtk/compositing/repaint/invalidations-on-composited-layers-with-subpixel-positions-expected.txt: Added.
* platform/ios/compositing/repaint/invalidations-on-composited-layers-with-subpixel-positions-expected.png: Added.
* platform/ios/compositing/repaint/invalidations-on-composited-layers-with-subpixel-positions-expected.txt: Added.
* platform/mac/compositing/repaint/invalidations-on-composited-layers-with-subpixel-positions-expected.png: Added.
* platform/mac/compositing/repaint/invalidations-on-composited-layers-with-subpixel-positions-expected.txt: Added.
* platform/wpe/compositing/repaint/invalidations-on-composited-layers-with-subpixel-positions-expected.png: Added.
* platform/wpe/compositing/repaint/invalidations-on-composited-layers-with-subpixel-positions-expected.txt: Added.

Canonical link: https://commits.webkit.org/207899@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@239919 268f45cc-cd09-0410-ab3c-d52691b4dbfc